--- a/app/config/base/symfony_routing.yml
+++ b/app/config/base/symfony_routing.yml
@@ -3,6 +3,10 @@ NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
 
+TestBundle:
+    resource: "@TestBundle/Resources/config/routing.yml"
+
 #
 #fos_user:
 #    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
