--- a/app/config/base/symfony_config.yml
+++ b/app/config/base/symfony_config.yml
@@ -9,4 +9,16 @@ framework:
     templating:
         engines: ['twig']
 
-nelmio_api_doc: ~
+nelmio_api_doc:
+
+    swagger:
+        api_base_path:        /api
+        swagger_version:      '1.2'
+        api_version:          '0.1'
+        info:
+            title:                Symfony2
+            description:          'My awesome Symfony2 app!'
+            TermsOfServiceUrl:    null
+            contact:              null
+            license:              null
+            licenseUrl:           null
