--- a/app/config/base/symfony/security.yml
+++ b/app/config/base/symfony/security.yml
@@ -15,9 +15,9 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-                # if you are using Symfony < 2.8, use the following config instead:
-                # csrf_provider: form.csrf_provider
+#                csrf_token_generator: security.csrf.token_manager
+#                # if you are using Symfony < 2.8, use the following config instead:
+                csrf_provider: form.csrf_provider
 
             logout:       true
             anonymous:    true
