--- a/app/config/base/symfony/config.yml
+++ b/app/config/base/symfony/config.yml
@@ -44,3 +44,9 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+
+services:
+    ppi.exception_listener:
+      class: TestBundle\Listener\ExceptionListener
+      tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 1 }
