--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,7 @@
         "nelmio/api-doc-bundle": "^2.12",
         "knplabs/knp-menu-bundle": "^2.0",
         "symfony/validator": "^3.0",
-        "symfony/swiftmailer-bundle": "^2.3",
-        "doctrine/doctrine-bundle": "^1.6",
-        "symfony/form": "^3.0",
-        "doctrine/orm": "^2.5"
+        "symfony/swiftmailer-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
