--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "The PPI Skeleton Application - A pre-built application around the PPI Framework. Lots of extra goodies",
     "homepage": "http://www.ppi.io",
     "license": "MIT",
-    "keywords": ["framework", "ppi", "symfony", "zend", "doctrine", "laravel", "fuelphp", "mongo", "pdo", "ppi", "skeletonapp", "bootstrap", "html5", "jquery", "mustache"],
+    "keywords": ["framework", "ppi", "symfony", "zend", "doctrine", "laravel"],
     "type": "library",
     "authors": [
           {
@@ -24,9 +24,14 @@
         "ppi/distribution-module": "dev-master",
         "friendsofsymfony/user-bundle": "^1.3",
         "nelmio/api-doc-bundle": "^2.12",
-        "knplabs/knp-menu-bundle": "^2.0",
-        "symfony/validator": "^3.0",
-        "symfony/swiftmailer-bundle": "^2.3"
+        "symfony/swiftmailer-bundle": "^2.3",
+        "doctrine/orm": "^2.4",
+        "doctrine/doctrine-bundle": "^1.4",
+        "symfony/validator": "^2.7",
+        "symfony/security": "^2.7",
+        "symfony/security-acl": "^2.7",
+        "symfony/form": "^2.7"
+
     },
     "scripts": {
         "post-install-cmd": [
