--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,13 @@
         "symfony/swiftmailer-bundle": "^2.3",
         "doctrine/orm": "^2.4",
         "doctrine/doctrine-bundle": "^1.4",
-        "symfony/validator": "^2.7",
-        "symfony/security": "^2.7",
-        "symfony/security-acl": "^2.7",
-        "symfony/form": "^2.7"
+        "symfony/symfony": "2.7.*",
+
+        "symfony/validator": "2.7.*",
+        "symfony/security": "2.7.*",
+        "symfony/security-acl": "2.7.*",
+        "symfony/form": "2.7.*",
+        "symfony/twig-bundle": "2.7.*
 
     },
     "scripts": {
