--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "symfony/security": "2.7.*",
         "symfony/security-acl": "2.7.*",
         "symfony/form": "2.7.*",
-        "symfony/twig-bundle": "2.7.*
+        "symfony/twig-bundle": "2.7.*"
 
     },
     "scripts": {
